Fix overflows  on mobile navbar and header

--- a/scss/trema/header.scss
+++ b/scss/trema/header.scss
@@ -283,10 +283,6 @@
             border: 0 none;
             padding: 0;
         }
-        .navbar-brand.d-none {
-            display: flex !important;
-            margin-left: 10px !important;
-        }
         .usermenu {
             padding-right: 0;
             .avatar.current {
